# GreenHealth_AI_Sustainable_Intelligence

./: .flake8  .gitignore  ARCHITECTURE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  render.yaml  setup.cfg
.github/workflow/: ci.yml
api/: app.py
backend/: config.py  requirements.txt
backend/ml/: data_generator.py
backend/routes/: chatbot.py  energy.py  waste.py
backend/utils/: alert_engine.py  pdf_generator.py
database/: models.py
docs/: API.md  DEPLOYMENT.md  HACKATHON_CHECKLIST.md  TECH_STACK.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/dashboard/: EnergyChart.jsx  ScoreCard.jsx  StatCard.jsx
frontend/src/pages/: Analytics.jsx  EnergyPage.jsx  PaperPage.jsx  WastePage.jsx
frontend/src/services/: api.js
ml/: predictor.py
routes/: chatbot.py  paper.py  report.py  score.py
services/: api.js
src/components/chatbot/: Chatbot.jsx
src/components/dashboard/: AlertPanel.jsx  DepartmentLeaderboard.jsx  StatCard.jsx  WasteChart.jsx
src/components/shared/: Navbar.jsx  Sidebar.jsx
src/pages/: ChatbotPage.jsx  Dashboard.jsx  EnergyPage.jsx  PaperPage.jsx  WastePage.jsx
utils/: score_calculator.py
