[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenhealth-ai"
version = "1.0.0"
description = "Real-Time Sustainability Intelligence Platform for Hospitals"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Shalu", email = "your-email@example.com" }
]
keywords = [
    "healthcare",
    "sustainability",
    "ESG",
    "artificial-intelligence",
    "analytics",
    "climate-tech"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.0.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", ".venv"]
