[metadata]
name = greenhealth-ai
version = 1.0.0
description = Real-Time Sustainability Intelligence Platform for Hospitals
long_description = file: README.md
long_description_content_type = text/markdown
author = Shalu
author_email = your-email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    flask>=3.0.0
    pandas>=2.0.0
    numpy>=1.24.0
    scikit-learn>=1.3.0
    plotly>=5.0.0
    reportlab>=4.0.0
    python-dotenv>=1.0.0
    requests>=2.31.0

[options.extras_require]
dev =
    pytest>=7.0.0
    flake8>=6.0.0
    black>=23.0.0

[flake8]
max-line-length = 88
exclude = __pycache__, .venv

[tool:pytest]
testpaths = tests
addopts = -ra -q

[coverage:run]
branch = True
source = greenhealth_ai
